# Open-Claw-Auxiliary-Libs

./: .gitignore  README.md
plugins/a2a-protocol/: ATTRIBUTION.md  README.md  cli.py  detect_env.py  pyproject.toml  test_agent_card.py  test_client.py  test_sse.py  test_task_manager.py
plugins/a2a-protocol/agent/: __init__.py  base.py  card.py  client.py
plugins/a2a-protocol/server/: __init__.py  agent_card.py  auth.py  db.py  env_scanner.py  gateway.py  gateway_adapter.py  gateway_hermes.py  gateway_pool.py  gateway_selector.py  heartbeat.py  jsonrpc.py  main.py  metrics.py  ratelimit.py  retry.py  session.py  session_store.py  sse.py  task_manager.py  websocket.py
plugins/a2a-protocol/utils/: config.py
prompt/: Evolutionary.Protocol.md
