[project]
name = "a2a-protocol"
version = "1.0.0"
description = "标准 A2A 协议实现，支持 JSON-RPC 2.0、SSE、WebSocket、ULID 会话队列"
requires-python = ">=3.10"
authors = [
    {name = "Hermes Agents", email = "agencys.cn@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["a2a", "agent", "protocol", "json-rpc", "sse", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "ulid>=1.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
cli = [
    "prompt-toolkit>=3.0.0",
]
prometheus = [
    "prometheus-client>=0.19.0",
]

[project.scripts]
a2a-cli = "cli:main"

[project.urls]
Homepage = "https://github.com/agencys-cn/Open-Claw-Auxiliary-Libs"
Documentation = "https://github.com/agencys-cn/Open-Claw-Auxiliary-Libs#readme"
Repository = "https://github.com/agencys-cn/Open-Claw-Auxiliary-Libs"
Issues = "https://github.com/agencys-cn/Open-Claw-Auxiliary-Libs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["server", "agent", "utils"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
